WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25738
Skia: CSS border style not cleared for SVG object
https://bugs.webkit.org/show_bug.cgi?id=25738
Summary
Skia: CSS border style not cleared for SVG object
Roland Steiner
Reported
2009-05-12 15:37:42 PDT
[First reported here:
http://code.google.com/p/chromium/issues/detail?id=9580
] On Chrome (Skia), the SVG triangle rendered with the following HTML has a dotted outline. EXPECTED: The triangle should have a solid outline. <html xmlns="
http://www.w3.org/1999/xhtml
"> <head></head> <body> <div style="border: 4px dotted black; height:100px; width: 100px"></div> <svg width="300" height="300" version="1.1" xmlns="
http://www.w3.org/2000/svg
"> <polyline points="100,100 100,200 200,200 100,100" style="stroke:red;stroke-width:5;stroke-dasharray:none"/> </svg> </body> </html>
Attachments
Patch: override with SolidStroke if no dash set
(1.84 KB, patch)
2009-05-12 17:43 PDT
,
Roland Steiner
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Roland Steiner
Comment 1
2009-05-12 17:43:06 PDT
Created
attachment 30256
[details]
Patch: override with SolidStroke if no dash set I haven't (yet) added a new layout test for this patch due to the additional complications with different rendering styles for dotted lines on all platforms (cf.
https://bugs.webkit.org/show_bug.cgi?id=25737
)
Eric Seidel (no email)
Comment 2
2009-05-12 18:26:24 PDT
Comment on
attachment 30256
[details]
Patch: override with SolidStroke if no dash set I'm a good choice to review this. But you don't actually need to specify a reviewer for WebKit reviews. In fact, they'll often happen quicker if you don't. This change needs a test case as part of the patch. Otherwise, this looks fine. I'll add the test you provided when I land this (even though the test already passes for WebKit Mac).
Eric Seidel (no email)
Comment 3
2009-05-12 21:47:12 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog A LayoutTests/platform/mac/svg/custom/no-inherited-dashed-stroke-expected.checksum A LayoutTests/platform/mac/svg/custom/no-inherited-dashed-stroke-expected.png A LayoutTests/platform/mac/svg/custom/no-inherited-dashed-stroke-expected.txt A LayoutTests/svg/custom/no-inherited-dashed-stroke.xhtml M WebCore/ChangeLog M WebCore/platform/graphics/skia/GraphicsContextSkia.cpp Committed
r43608
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug